--- a/style.css
+++ b/style.css
@@ -1,4 +1,220 @@
-p
-{color:red;
- font-size: 40 px;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed+Thin|Raleway|Montserrat');
+
+
+
+@media only screen and (min-width: 1024px) {
+   /* Add your custom styles here for Desktop */
+   .cardHeader{
+  background-color:#FFFFFF;
+  color: #0077FF;
+  transition: 0.3s;
+  font-family: 'Roboto condensed',sans-serif;
+  font-size: 27px;
+
 }
+ }
+ @media only screen and (max-width: 1023px) {
+   /* Add your custom styles here for Tablet */
+   .cardHeader{
+  background-color:#FFFFFF;
+  color: #0077FF;
+  transition: 0.3s;
+  font-family: 'Roboto condensed',sans-serif;
+  font-size: 24px;
+
+}
+ }
+ @media only screen and (max-width: 640px) {
+   /* Add your custom styles here for Mobile */
+   .cardHeader{
+  background-color:#FFFFFF;
+  color: #0077FF;
+  transition: 0.3s;
+  font-family: 'Roboto condensed',sans-serif;
+  font-size: 20px;
+
+}
+ }
+ @media only screen and (max-width: 480px) {
+   /* Add your custom styles here for smaller Mobile */
+   .cardHeader{
+  background-color:#FFFFFF;
+  color: #0077FF;
+  transition: 0.3s;
+  font-family: 'Roboto condensed',sans-serif;
+  font-size: 20px;
+
+}
+ }
+
+
+#head{
+  background: #0077FF;
+}
+
+body
+{
+  overflow-x: hidden;
+  background-image: url("/cseDepartmentClassicFrontend2017-NizarSirs/bg.jpeg");
+  background-size: 1500px 720px;
+
+
+}
+
+.menuButtonContainer
+{
+  display: inline-block;
+  cursor: pointer;
+  margin-left: 22px;
+  margin-top: 17px;
+  position: absolute;
+  z-index: 1;
+}
+
+.bar1, .bar2, .bar3
+{
+  width: 35px;
+  height: 5px;
+  background-color: #CCE4FF;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1
+{
+  -webkit-transform: rotate(-45deg) translate(-7px, 7px) ;
+  transform: rotate(-45deg) translate(-7px, 7px) ;
+}
+
+.change .bar2
+{
+  opacity: 0;
+}
+
+.change .bar3
+{
+  -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+  transform: rotate(45deg) translate(-8px, -8px) ;
+}
+
+#headerRow
+{
+  min-height: 73.5px;
+  
+}
+
+#headingDepartmentText {
+  font-family: 'Open Sans Condensed', sans-serif;
+  margin-left: 79px;
+  color: #FFFFFF;
+  top: 6px;
+  position: relative;
+}
+
+#headingCollegeText {
+  font-family: 'Raleway', sans-serif;
+  margin-left: 80px;
+  color: #FFFFFF;
+  top: 4px;
+  position: relative;
+  margin-bottom: -1px;
+  font-weight: 700;
+  padding-bottom: 22px;
+}
+
+#mainMenu {
+  display: none;
+  background-color: #0077FF;
+  float: left;
+  height: 100vh;
+}
+
+#mainMenu a {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #0077FF;
+  color: #fff;
+  display: block;
+  padding: 8px;
+  text-decoration: none;
+  padding-left: 21px;
+  border-style: solid;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  border-top-width: 0px;
+  border-bottom-width: 1px;
+  border-color: #006DE7;
+}
+
+#mainMenu a:hover {
+  background-color: #006DE7;
+}
+
+#mainMenu ul {
+  list-style-type: none;
+}
+
+#mainMenu ul li {
+}
+
+h4#menuTitle {
+  font-family: 'Montserrat', sans-serif;
+  padding-left: 20px;
+  padding-top: 12px;
+  padding-bottom: 28px;
+  color: #FFFFFF;
+  margin-top: 14px;
+  border-style: solid;
+  border-width: 0px 0px 1px 0px;
+  margin-bottom: 0px;
+  border-color: #006DE7;
+}
+
+#mainContent {
+  position: relative;
+  left : 0px;
+  right: 0px;
+  z-index: 0;
+}
+
+#mainContentOverlay {
+  display: none;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 74px;
+  left: 250px;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+.main{
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+}
+#hed{
+  text-align: left;
+  color : #0077FF;
+}
+.con{
+  line-height: 2;
+  font-style: italic;
+}
+.tit{
+  font-size: 24px;
+  text-align: center;
+}
+
+/*.cardHeader{
+  background-color:#FFFFFF;
+  color: #0077FF;
+  transition: 0.3s;
+  font-family: 'Roboto condensed',sans-serif;
+  font-size: 27px;
+
+}
+/*
+
+
+
+/*on .card added  border-radius: 5px; (24 june at 12 am)*/
+/* on body added background image 29 jun at 13pm*/
