--- a/style.css
+++ b/style.css
@@ -191,6 +191,17 @@ h4#menuTitle {
   margin-right: auto;
   margin-top: 30px;
 }
+
+
+/* START CSS ADDITIONS HERE ONLY*/
+
+#header{
+  font-family: 'Raleway', sans-serif;
+  padding-left: 15%;
+  font-size:50px;
+  font-weight: 700;
+}
+
 #hed{
   text-align: left;
   color : #0077FF;
@@ -202,6 +213,15 @@ h4#menuTitle {
 .tit{
   font-size: 24px;
   text-align: center;
+}
+
+.aboutText{
+  padding-top: 40px;
+  font-family: 'Montserrat', sans-serif;
+  padding-left: 15%;
+  font-size:20px;
+  font-weight: 10;
+  margin-right: 100px;
 }
 
 /*.cardHeader{
